--- a/racing-graph/index.html
+++ b/racing-graph/index.html
@@ -1,6 +1,11 @@
 <html>
-  <head></head>
+  <head>
+    <style>
+      * { font-family: "Ubuntu"; }
+    </style>
+  </head>
   <body>
+    <center><h1>Popular female baby names of Kerala</h1></center>
     <div id="race"></div>
     <script type="module" src="index.js"></script>
   </body>
