Add racing graphs

--- a/racing-graph/index.html
+++ b/racing-graph/index.html
@@ -5,7 +5,7 @@
     </style>
   </head>
   <body>
-    <center><h1>Popular female baby names of Kerala</h1></center>
+    <center><h1>Popular boy baby names of Kerala</h1></center>
     <div id="race"></div>
     <script type="module" src="index.js"></script>
   </body>
