--- a/name-graph/index.html
+++ b/name-graph/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chart</title>
   <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
 </head>
 <body>
-  <div style="width: 800px;margin: 0 auto;">
-    <div id="chart" style="width: 800px; height: 450px;"></div>
+  <div style="width: 100%;margin: 0 auto;">
+    <div id="chart" style="width: 100%; height: 450px;"></div>
     <form id="queryForm" style="text-align: center;display: flex; flex-direction: column; gap: 4px;">
       <div>SQL:</div>
       <div>
