Show error in log

--- a/name-graph/index.html
+++ b/name-graph/index.html
@@ -15,7 +15,8 @@
         <textarea id="query" rows="2" cols="60">SELECT * FROM humans WHERE name = 'Bindhu' OR name = 'Sindhu' AND year > 1960 ORDER BY year;</textarea>
       </div>
       <div>
-        <button>Execute</button>
+        <button>Execute</button>&nbsp;&nbsp;&nbsp;
+        <button type="reset">Reset</button>
       </div>
     </form>
     <div id="log"></div>
